# Exiv

./: .env.bak  .env.example  .gitignore  ARCHITECTURAL_PRINCIPLES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  ai_karin  install.ps1  install.sh  mcp.toml  start_cloto.sh  start_exiv.sh  start_vers.sh  test_gpu_detection.html  uninstall.ps1
.cargo/: audit.toml  config.toml
.github/: dependabot.yml  pull_request_template.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  client.rs  config.rs  error.rs  main.rs  output.rs
crates/cli/src/commands/: agents.rs  chat.rs  config_cmd.rs  logs.rs  mod.rs  permissions.rs  plugins.rs  status.rs
crates/cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/cli/src/tui/widgets/: agents.rs  events.rs  help.rs  metrics.rs  mod.rs
crates/core/: Cargo.toml
crates/core/benches/: database_operations.rs  event_processing.rs  plugin_dispatch.rs  rate_limiting.rs  security_operations.rs
crates/core/benches/helpers/: mod.rs
crates/core/migrations/: 20260205000000_init.sql  20260206000000_add_permissions.sql  20260212000000_final_seeds.sql  20260213000000_add_audit_logs.sql  20260213120000_add_permission_requests.sql  20260217000000_add_chat_persistence.sql  20260217100000_rename_python_analyst.sql  20260218000000_agent_heartbeat_power.sql  20260219000000_add_runtime_plugins.sql  20260219120000_add_revoked_keys.sql  20260220000000_add_agent_plugins.sql  20260220000001_fix_agent_engine_type.sql  20260220000002_grant_memory_permissions.sql  20260222000000_add_mcp_servers.sql  20260223000000_add_mcp_access_control.sql  20260225000000_rename_exiv_to_cloto.sql  20260227000000_add_mcp_server_env.sql  20260228000000_add_cron_jobs.sql  20260228100000_add_llm_providers.sql  20260301000000_default_policy_opt_out.sql
crates/core/src/: capabilities.rs  cli.rs  config.rs  consensus.rs  db.rs  events.rs  evolution.rs  handlers.rs  installer.rs  lib.rs  main.rs  managers.rs  middleware.rs  test_utils.rs  validation.rs
crates/core/src/evolution/: calc.rs  engine.rs  mod.rs  types.rs
crates/core/src/handlers/: agents.rs  assets.rs  chat.rs  cron.rs  events.rs  evolution.rs  llm.rs  mcp.rs  permissions.rs  skill_manager.rs  system.rs  update.rs
crates/core/src/managers/: agents.rs  llm_proxy.rs  mcp.rs  mcp_protocol.rs  mcp_transport.rs  mod.rs  plugin.rs  registry.rs  scheduler.rs
crates/core/src/platform/: linux.rs  windows.rs
crates/core/tests/: concurrent_events_test.rs  e2e_workflows_test.rs  event_cascading_test.rs  event_memory_management_test.rs  evolution_engine_test.rs  handlers_http_test.rs  kernel_integration_test.rs  memory_chronology_test.rs  migration_test.rs  permission_elevation_test.rs  permission_workflow_test.rs  plugin_lifecycle_test.rs  plugin_management_test.rs  security_forging_test.rs  sse_streaming_test.rs  system_loop_test.rs
crates/core/tests/common/: mock_plugin.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  llm.rs
dashboard/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/scripts/: mcp_web_hello_world.py
dashboard/src-tauri/src/: lib.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_QUALITY_AUDIT.md  DEVELOPMENT.md  KS22_MEMORY_DESIGN.md  MAINTAINABILITY.md  MCP_PLUGIN_ARCHITECTURE.md  MCP_SERVER_UI_DESIGN.md  MGP_ADOPTION.md  MGP_PATTERNS.md  MGP_REVIEW_RESPONSE.md  MGP_SPEC.md  PROJECT_VISION.md  README.md  SCHEMA.md  SELF_EVOLUTION_PROTOCOL.md  STRATEGY.md  TRIGGER_LAYER_DESIGN.md  V0_3_CHAT_UX.md  WASM_PLUGIN_DESIGN.md  e7-capability-gain.md
exiv_dashboard/src-tauri/: Cargo.toml  tauri.conf.json
exiv_dashboard/src-tauri/capabilities/: default.json
exiv_dashboard/src-tauri/src/: lib.rs
mcp-servers/deepseek/: pyproject.toml  server.py
mcp-servers/embedding/: pyproject.toml  server.py
mcp-servers/gaze/: gaze_engine.py  pyproject.toml  server.py
mcp-servers/ks22/: pyproject.toml  server.py
mcp-servers/terminal/: pyproject.toml  server.py
plugins/cerebras/: Cargo.toml
plugins/cerebras/src/: lib.rs
plugins/deepseek/: Cargo.toml
plugins/deepseek/src/: lib.rs
plugins/ks22/: Cargo.toml
plugins/ks22/src/: lib.rs
plugins/mcp/: Cargo.toml
plugins/mcp/src/: client.rs  lib.rs  protocol.rs  stdio.rs
plugins/moderator/: Cargo.toml
plugins/moderator/src/: lib.rs
plugins/python_bridge/: Cargo.toml
plugins/python_bridge/src/: config.rs  ipc.rs  lib.rs  process.rs  state.rs
plugins/python_bridge/tests/: bridge_test.rs
plugins/vision/: Cargo.toml
plugins/vision/src/: lib.rs
vers_core/: Cargo.toml
vers_core/benches/: database_operations.rs  event_processing.rs  plugin_dispatch.rs  rate_limiting.rs  security_operations.rs
vers_core/benches/helpers/: mod.rs
vers_core/migrations/: 20260205000000_init.sql  20260206000000_add_permissions.sql  20260207000000_add_sal_storage.sql  20260208000000_seeds.sql  20260208100000_add_agent_capabilities.sql  20260208200000_optimize_plugin_data.sql  20260212000000_final_seeds.sql
vers_core/src/: capabilities.rs  cli.rs  config.rs  db.rs  events.rs  handlers.rs  installer.rs  lib.rs  main.rs  managers.rs  plugins.rs
vers_core/src/handlers/: assets.rs  system.rs  update.rs
vers_core/src/platform/: linux.rs  windows.rs
vers_core/tests/: e2e_workflows_test.rs  event_cascading_test.rs  event_memory_management_test.rs  handlers_http_test.rs  kernel_integration_test.rs  memory_chronology_test.rs  permission_elevation_test.rs  plugin_management_test.rs  security_forging_test.rs  sse_streaming_test.rs  system_loop_test.rs
vers_plugins/plugin_cerebras/: Cargo.toml
vers_plugins/plugin_cerebras/src/: lib.rs
vers_plugins/plugin_deepseek/: Cargo.toml
vers_plugins/plugin_deepseek/src/: lib.rs
vers_plugins/plugin_ks2_2/: Cargo.toml
vers_plugins/plugin_ks2_2/src/: lib.rs
vers_plugins/plugin_mcp/: Cargo.toml
vers_plugins/plugin_mcp/src/: client.rs  lib.rs  stdio.rs
vers_shared/: Cargo.toml
vers_shared/src/: lib.rs
(+273 files in other folders)
