[workspace]
members = [
    "exiv_core",
    "exiv_shared",
    "exiv_plugins/plugin_ks22",
    "exiv_plugins/plugin_deepseek",
    "exiv_plugins/plugin_cerebras",
    "exiv_plugins/plugin_moderator",
    "exiv_plugins/plugin_mcp",
    "exiv_plugins/plugin_vision",
    "exiv_plugins/plugin_cursor",
    "exiv_macros",
    "exiv_plugins/plugin_python_bridge",
    "exiv_dashboard/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Exiv Project <exiv.project@proton.me>"]
license = "BSL-1.1"
repository = "https://github.com/Exiv-ai/Exiv"
homepage = "https://github.com/Exiv-ai/Exiv"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.2", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6.1"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
