[workspace]
members = [
    "crates/core",
    "crates/shared",
    "crates/cli",
    "dashboard/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.2.8"
edition = "2021"
authors = ["ClotoCore <ClotoCore@proton.me>"]
license = "BSL-1.1"
repository = "https://github.com/Cloto-dev/ClotoCore"
homepage = "https://github.com/Cloto-dev/ClotoCore"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
uuid = { version = "1.2", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
dashmap = "6.1"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
semver = "1.0"
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
indicatif = "0.17"
toml = "0.8"
dirs = "6"
dialoguer = "0.11"
ratatui = "0.30"
crossterm = "0.28"
