[package]
name = "vers_core"
version.workspace = true
edition.workspace = true

[dependencies]
vers_shared = { path = "../vers_shared" }
plugin_ks2_2 = { path = "../vers_plugins/plugin_ks2_2" }
plugin_deepseek = { path = "../vers_plugins/plugin_deepseek" }
plugin_cerebras = { path = "../vers_plugins/plugin_cerebras" }
plugin_cursor = { path = "../vers_plugins/plugin_cursor" }
plugin_python_bridge = { path = "../vers_plugins/plugin_python_bridge" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros"] }
async-trait.workspace = true
axum.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tower-http.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http = "1.0"