[package]
name = "vers_shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
vers_macros = { path = "../vers_macros" }
inventory = "0.3.21"
