[package]
name = "cloto_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cloto"
path = "src/main.rs"

[dependencies]
cloto_shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
toml.workspace = true
dirs.workspace = true
chrono.workspace = true
dialoguer.workspace = true
futures.workspace = true
ratatui.workspace = true
crossterm = "0.28"
