[package]
name = "cloto_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cloto"
path = "src/main.rs"

[dependencies]
cloto_shared = { path = "../shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
reqwest.workspace = true
clap.workspace = true
colored = "3"
comfy-table = "7"
indicatif = "0.17"
toml.workspace = true
dirs.workspace = true
chrono.workspace = true
dialoguer = "0.11"
futures.workspace = true
ratatui = "0.30"
crossterm = "0.28"
