[package]
name = "exiv_shared"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror = "2.0"
async-trait.workspace = true
tokio.workspace = true
axum.workspace = true
exiv_macros = { path = "../macros" }
inventory = "0.3.21"
