[package]
name = "app"
version.workspace = true
description = "ClotoCore Desktop Application"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"

# Screen capture
xcap = "0.0.13"
image = "0.25"
base64 = "0.21"

# ClotoCore Kernel (provides axum, tower-http, tokio, tracing, etc.)
cloto_core = { path = "../../crates/core" }
dotenvy = "0.15"
