[project]
name = "exiv-mcp-embedding"
version = "0.1.0"
description = "Exiv MCP Server: Vector embedding generation (local ONNX + API providers)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17.0", "tokenizers>=0.15.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
