[project]
name = "cloto-mcp-gaze"
version = "0.1.0"
description = "Cloto MCP Server: Webcam gaze tracking via MediaPipe"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "mediapipe>=0.10.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
