[project]
name = "cloto-mcp-terminal"
version = "0.1.0"
description = "Cloto MCP Server: Terminal (sandboxed command execution)"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
