[package]
name = "plugin_cerebras"
version.workspace = true
edition.workspace = true

[dependencies]
exiv_shared = { path = "../../crates/shared" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing.workspace = true
