[package]
name = "plugin_deepseek"
version.workspace = true
edition.workspace = true

[dependencies]
exiv_shared = { path = "../../crates/shared" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
axum = "0.7"
tokio = { version = "1.0", features = ["sync"] }
reqwest = { version = "0.12", features = ["json"] }
