[package]
name = "plugin_ks22"
version.workspace = true
edition.workspace = true

[dependencies]
exiv_shared = { path = "../../crates/shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "chrono"] }

reqwest = { version = "0.12", features = ["json"] }