[package]
name = "plugin_moderator"
version.workspace = true
edition.workspace = true

[dependencies]
exiv_shared = { path = "../../crates/shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
