[package]
name = "plugin_python_bridge"
version.workspace = true
edition = "2021"

[dependencies]
exiv_shared = { path = "../../crates/shared" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tracing = "0.1"
axum = "0.7"