[package]
name = "plugin_cerebras"
version.workspace = true
edition.workspace = true

[dependencies]
vers_shared = { path = "../../vers_shared" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing.workspace = true
