[package]
name = "plugin_ks2_2"
version.workspace = true
edition.workspace = true

[dependencies]
vers_shared = { path = "../../vers_shared" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx.workspace = true
reqwest = { version = "0.12", features = ["json"] }