[package]
name = "plugin_mcp"
version.workspace = true
edition.workspace = true

[dependencies]
vers_shared = { path = "../../vers_shared" }
tokio = { workspace = true, features = ["process", "io-util"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
